# virtual-economy-service

./: .env.example  17.11 Тестовое задание для Python-разработчика (middle+).docx  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: d90cfb3756b4_initial_migration.py
src/application/: errors.py
src/application/models/: inventory.py  product.py  transaction.py  user.py
src/application/repositories/: inventory.py  product.py  user.py
src/application/use_cases/: add_funds.py  add_purchase.py  consume_product.py  show_inventory.py  show_popular_products.py
src/infrastructure/: cache.py  celery.py  config.py  container.py  tasks.py
src/infrastructure/db/: db_adapter.py  orm.py  queries.py  uow.py
src/infrastructure/utils/: helpers.py
src/interfaces/: cache.py  context.py  db_adapter.py  domain_model.py  repository.py  uow.py  usecase.py
src/presentation/api/: app.py  depends.py  error_handlers.py  main.py
src/presentation/api/routes/: analytics.py  products.py  users.py
src/presentation/api/schema/: requests.py  responses.py
tests/: conftest.py  mocks.py  test_api.py  test_use_cases.py
